# gRASPA

./: .gitignore  README.md
graspa-sycl/: CMakeLists.txt  README.md  gdb_script.sh  toggle_eu_debug.sh
graspa-sycl/src/: CMakeLists.txt  Ewald_Energy_Functions.h  TailCorrection_Energy_Functions.h  VDW_Coulomb.cpp  VDW_Coulomb.dp.hpp  axpy.cpp  axpy.h  data_struct.h  ewald_preparation.h  fxn_main.h  main.cpp  maths.dp.hpp  mc_single_particle.h  mc_swap_moves.h  mc_swap_utilities.h  mc_utilities.h  mc_widom.h  print_statistics.dp.hpp  read_data.cpp  sycl_device.hpp  write_data.h
graspa-sycl/test/CO2-MFI-Example/: CUDA-Test_run  Float-run  MgMOF-74-1x1x1-P1-VASP.cif  cli_output  force_field_mixing_rules.def  make-sims  minimax.txt  original_pseudo_atoms.def  output_force_field_mixing_rules.def  pseudo_atoms.def  result  run  simulation.input
graspa-sycl/test/CO2-MFI-Example/AllData/System_0/: AllAdsorbate.data
graspa-sycl/test/CO2-MFI-Example/Movies/System_0/: result.data
graspa-sycl/test/CO2-MFI-Example/Restart/System_0/: restartfile
